Update MCS and CLH locks